--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Expense Tracker</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Hi everyone</p>
+    <div class="container">
+        <h1>Expense Tracker</h1>
+        
+        <!-- Expense Input Form -->
+        <form id="expense-form">
+            <input type="number" id="amount" placeholder="Enter amount (€)" required>
+            <input type="text" id="description" placeholder="Description" required>
+            <select id="category">
+                <option value="Food">Food</option>
+                <option value="Transport">Transport</option>
+                <option value="Shopping">Shopping</option>
+                <option value="Other">Other</option>
+            </select>
+            <button type="submit">Add Expense</button>
+        </form>
+
+        <!-- Display Expenses -->
+        <h2>Expenses</h2>
+        <ul id="expense-list"></ul>
+
+        <!-- Total Expense -->
+        <h3>Total: <span id="total-amount">0</span> €</h3>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
